# OthelloGame

./: .gitignore  CMakeLists.txt  main.cpp
include/: gl.hpp  othello_game.hpp
src/: gl.cpp  main.cpp
